Moved JS files around.

--- a/new/home.html
+++ b/new/home.html
@@ -495,20 +495,20 @@
 
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
-        <script src="js/home/vendor/modernizr-2.6.2.min.js"></script>
+        <script src="js/home/modernizr-2.6.2.min.js"></script>
         <script src="js/home/main.js"></script>
         <script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script>
         <script src="js/home/jquery.smoothwheel.js"></script>
         <script src="js/home/jquery.inview.min.js"></script>
         <script src="js/home/jquery.sticky.js"></script>
-        <script src="js/home/caroussel/jquery.easing.1.3.js"></script>
+        <script src="js/home/jquery.easing.1.3.js"></script>
         <script src="js/home/portfolio.js"></script>
-        <script src="js/home/vegas/jquery.vegas.js"></script>
+        <script src="js/home/jquery.vegas.js"></script>
         <script src="js/home/jquery.hoverdir.min.js"></script>
         <script src="js/home/jquery.nav.js"></script>
-        <script src="js/home/popup/jquery.magnific-popup.js"></script>
+        <script src="js/home/jquery.magnific-popup.js"></script>
         <script src="js/home/jquery.isotope.min.js"></script>
-        <script src="js/home/video/jquery.mb.YTPlayer.js"></script>
+        <script src="js/home/jquery.mb.YTPlayer.js"></script>
         <script src="js/home/jquery.validate.js"></script>
         <script src="js/home/jquery.form.min.js"></script>
     </body>
