Removed 2 empty project html files.

--- a/new/portfolio-08.html
+++ b/new/portfolio-08.html
@@ -12,10 +12,10 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-01a.jpg"/></li>
-                <li><img src="img/works/work-01b.jpg"/></li>
-                <li><img src="img/works/work-01c.jpg"/></li>
-            </ul>
+                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/work-03b.jpg"/></li>
+                <li><img src="img/works/work-03c.jpg"/></li>
+              </ul>
         </div>
         <div class="controller-3">
             <ul>
@@ -24,10 +24,20 @@
 	</div>
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Software</div>
-        <div class="title-project">Top Secret</div>
+        <div class="tag-project">Hardware Design Engineer</div>
+        <div class="title-project">Electric Car</div>
         <div class="spacer"></div>
-        <div class="description">This project is not available for public eye yet.</div>
+        <div class="description">
+            This project is one of my most advanced hardware projects due to the fact that my team and I built fully functioning electric cars that are capable of going over 60 km/hr. The size of the team I worked with was around 15 people and I personally lead the hardware design and maintenance team which consisted of 8 members. As one of the leaders in this team, I was responsible for doing some of the core hardware design work as well as mentor the younger members of the team.<br><br>
+            The technology we used was AutoCAD (2D-drawings) and Solid Edge (3D-modelling). As a team, we were very successful in the races that we competed in. At the University of Waterloo Electric Car Challenge, for three consecutive years, we won the Engineering Design Award and managed to finish in the top 2. My team was called Bluevale. You can view the results here:
+            <ul>
+                <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2014-race-results" target="_blank">2014 Results</a></li>
+                <li><a href="https://uwaterloo.ca/sedra-student-design-centre/results/2013" target="_blank">2013 Results</a></li>
+                <li><a href="https://uwaterloo.ca/sedra-student-design-centre/waterloo-high-school-electric-vehicle-challenge/race-results/2012-race-results" target="_blank">2012 Results</a></li>
+            </ul>
+            Not only did we have great success at the University of Waterloo contests, we actually achieved success on an international level. We placed first in races located in the US. You can read more about our team accomplishments on our <a href="http://bcielectriccarclub.weebly.com/">team website.</a>
+            We also made the <a href="http://www.therecord.com/news-story/2603902-high-school-design-teams-race-to-perfect-electric-cars-/">news!</a>
+        </div>
     </div>
 </div>
 <div class="clear"></div>
