Isolate bouncing down arrow issue.

--- a/new/home.html
+++ b/new/home.html
@@ -57,7 +57,7 @@
             <div>
                 <div class="mk-video-mask"></div>
                 <a id="video-volume" onclick="$('#background-video').toggleVolume()"></a>
-                <div class="bounce"></div>
+                <!-- <div class="bounce"></div> -->
                 
                 <!-- Video Background -->
                 <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;" title="New York &quot;Afterglow&quot;">youtube</a>
