Update 'secret' portfolio message.

--- a/new/home.html
+++ b/new/home.html
@@ -390,7 +390,7 @@
                         <div class="ch-grid element" id="portfolio-07.html">
                             <img class="ch-item" src="img/portfolio/thumb-07.jpg" alt='img'>
                             <div>
-                                <span><span class="p-category"></span>Top Secret<span class="cat2">Software</span></span>
+                                <span><span class="p-category"></span>In Progress<span class="cat2">Software</span></span>
                             </div>
                         </div>
                         
