--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -23,9 +23,9 @@
     <div class="clear"></div>
     <div class="info-project">
         <div class="tag-project">Software</div>
-        <div class="title-project">Top Secret</div>
+        <div class="title-project">In Progress</div>
         <div class="spacer"></div>
-        <div class="description">This project is not available for public eye yet.</div>
+        <div class="description">This project is not available for display yet.</div>
     </div>
 </div>
 <div class="clear"></div>
