Fixed portfolio button active selector colour.

--- a/new/home.html
+++ b/new/home.html
@@ -329,7 +329,7 @@
                 <div class="section portfoliocontent">
                     <section id="options" class="clear">
                         <div id="filters" class="option-set clearfix foliomenu hideme dontHide" data-option-key="filter">
-                            <a href="#filter" data-option-value="*" class="p-selected folio-btn"><div class="portfolio-btn">All</div></a>
+                            <a href="#filter" data-option-value="*" class="folio-btn active"><div class="portfolio-btn">All</div></a>
                             <a href="#filter" data-option-value=".web" class="folio-btn"><div class="portfolio-btn">Web</div></a>
                             <a href="#filter" data-option-value=".mobile" class="folio-btn"><div class="portfolio-btn">Mobile</div></a>
                             <a href="#filter" data-option-value=".tools" class="folio-btn"><div class="portfolio-btn">Tools</div></a>
