Upgraded to jQuery 1.11.1 and removed jQuery UI.

--- a/new/home.html
+++ b/new/home.html
@@ -469,8 +469,7 @@
 
         <a href="#" class="scrollup">^</a>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/home/modernizr-2.6.2.min.js"></script>
         <script src="js/home/main.js"></script>
         <script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script>
