Fixed scroll up button and removed unused assets.

--- a/new/home.html
+++ b/new/home.html
@@ -467,7 +467,7 @@
             </div>
         </footer>
 
-        <a href="#" class="scrollup">^</a>
+        <a href="#home" class="scrollup">^</a>
 
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/home/modernizr-2.6.2.min.js"></script>
