--- a/new/portfolio-08.html
+++ b/new/portfolio-08.html
@@ -13,8 +13,8 @@
         <div class="wrapper-project">
             <ul>
                 <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03b.jpg"/></li>
-                <li><img src="img/works/work-03c.jpg"/></li>
+                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/work-03a.jpg"/></li>
               </ul>
         </div>
         <div class="controller-3">
