Added image content to projects page.

--- a/new/portfolio-03.html
+++ b/new/portfolio-03.html
@@ -36,7 +36,7 @@
             <p>On the software side of things we used object oriented programming practices and separated all of our code into functions. This code is fairly complex as we truly pushed the Lego Mindstorm NXT micro-controller to it's maximum in terms of GUI and processor speed. You can view the code on my <a href = "https://github.com/bhamodi/Lego-Mindstorms-ATM" target = "_blank">GitHub.</a></p>
             <h3>Video</h3>
             <p>The video shown below is just a quick 20-second feature overview of the ATM. This shows the final product that was presented.</p>
-            <iframe width="640" height="480" src="//www.youtube.com/embed/bjbmGOylRZY?rel=0" frameborder="0" allowfullscreen></iframe>
+            <iframe width="640" height="480" src="//www.youtube.com/watch?v=bjbmGOylRZY" frameborder="0" allowfullscreen></iframe>
         </div>
     </div>
 </div>
