--- a/new/portfolio-05.html
+++ b/new/portfolio-05.html
@@ -12,9 +12,8 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/fuelcellcar1.jpg"/></li>
+                <li><img src="img/works/fuelcellcar2.jpg"/></li>
             </ul>
         </div>
         <div class="controller-3">
