--- a/new/portfolio-02.html
+++ b/new/portfolio-02.html
@@ -12,9 +12,10 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/nyanbird_home.png"/></li>
+                <li><img src="img/works/nyanbird_ready.png"/></li>
+                <li><img src="img/works/nyanbird_death.png"/></li>
+                <li><img src="img/works/nyanbird_store.png"/></li>
             </ul>
         </div>
         <div class="controller-3">
