--- a/new/portfolio-08.html
+++ b/new/portfolio-08.html
@@ -12,9 +12,11 @@
         </div>
         <div class="wrapper-project">
             <ul>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
-                <li><img src="img/works/work-03a.jpg"/></li>
+                <li><img src="img/works/black_ecar.jpg"/></li>
+                <li><img src="img/works/all_ecars.jpg"/></li>
+                <li><img src="img/works/black_ecar_front.jpg"/></li>
+                <li><img src="img/works/ecar_eng_award.jpg"/></li>
+                <li><img src="img/works/ecar_first_place.jpg"/></li>
               </ul>
         </div>
         <div class="controller-3">
