--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -11,9 +11,7 @@
     		<div class="w-next"></div>
         </div>
         <div class="wrapper-project">
-            <ul>
-                <li><iframe width="1180" height="664" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe></li>
-            </ul>
+            <iframe width="1180" height="664" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="controller-3">
             <ul>
