Update empty portfolio message.

--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -23,7 +23,7 @@
         <div class="tag-project">Software</div>
         <div class="title-project">In Progress</div>
         <div class="spacer"></div>
-        <div class="description">This project is not available for display yet.</div>
+        <div class="description">This project is not available for display yet. Please check back later!</div>
     </div>
 </div>
 <div class="clear"></div>
