Implemented loading interface for home page.

--- a/new/home.html
+++ b/new/home.html
@@ -33,6 +33,7 @@
         <link rel="apple-touch-icon-precomposed" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57-precomposed.png">
 
+        <link rel="stylesheet" href="css/loader.css"/>
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/default.css">
@@ -43,7 +44,13 @@
     <body>
         <!--[if lte IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]--> 
+        <![endif]-->
+        <div class="preloader">
+            <div class="loading">
+                <h3>Loading...</h3>
+                <span class="progress"></span>
+            </div>
+        </div>
         <section id="home" class="clear">
             <div>
                 <div class="mk-video-mask"></div>
