Allow animation on mobile devices for stat counter.

--- a/new/home.html
+++ b/new/home.html
@@ -281,28 +281,28 @@
                 <div class="f-container">
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-one"></div>
-                        <div class="milestone-counter" data-perc="22500">
+                        <div class="milestone-counter1" data-perc="22500">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Lines of code</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-two"></div>
-                        <div class="milestone-counter" data-perc="15">
+                        <div class="milestone-counter2" data-perc="15">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Repositories</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-three"></div>
-                        <div class="milestone-counter" data-perc="15000">
+                        <div class="milestone-counter3" data-perc="15000">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Android downloads</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-four"></div>
-                        <div class="milestone-counter" data-perc="1280">
+                        <div class="milestone-counter4" data-perc="1280">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Days until graduation</div>
                         </div>
