Fix fact counter and cleanup.

--- a/new/home.html
+++ b/new/home.html
@@ -61,7 +61,7 @@
                 <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;" title="New York &quot;Afterglow&quot;">youtube</a>
             </div>
         </section>
-        <section id="homedevice" class="clear"></section>        
+        <section id="homedevice" class="clear"></section>
         <div class="main-title">
             <div class="title-container">
                 <div class="welcome">A young man with big dreams.</div>
@@ -276,33 +276,33 @@
 
         <article id="anchor3" class="content light">
             <section class="full">
-                <div class="title-full-one">enjoy them</div>
+                <div class="title-full-one">Enjoy Them</div>
                 <div class="title-full-two">Some Fun Facts</div>
                 <div class="f-container">
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-one"></div>
-                        <div class="milestone-counter1" data-perc="22500">
+                        <div class="milestone-counter" data-perc="22500">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Lines of code</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-two"></div>
-                        <div class="milestone-counter2" data-perc="15">
+                        <div class="milestone-counter" data-perc="52">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
-                            <div class="milestone-details">Repositories</div>
+                            <div class="milestone-details">Days of GitHub Contributions</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-three"></div>
-                        <div class="milestone-counter3" data-perc="15000">
+                        <div class="milestone-counter" data-perc="15000">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Android downloads</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-four"></div>
-                        <div class="milestone-counter4" data-perc="1280">
+                        <div class="milestone-counter" data-perc="1265">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Days until graduation</div>
                         </div>
@@ -342,7 +342,6 @@
                     </section>
                     <section id="i-portfolio" class="clear">
                         <div class="inici"></div>
-                        
                         <div class="ch-grid element tools" id="portfolio-01.html">
                             <img class="ch-item" src="img/portfolio/thumb-01.jpg" alt='img'>
                             <div>
@@ -404,6 +403,7 @@
                 </div>
             </div>
             <div class="clear"></div>
+
             <section class="list_carousel responsive hideme dontHide">
             <ul id="logos">
                 <li><img src="img/logos/logo-01.png" alt="logo"></li>
@@ -415,14 +415,12 @@
                 <li><img src="img/logos/logo-07.png" alt="logo"></li>
             </ul>
             <div class="clearfix"></div>
-        </section>
+            </section>
 
-        <section class="img-spacer">
-          <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
-        </section>
+            <section class="img-spacer">
+              <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
+            </section>
         </article>
-
-        
 
         <footer class="footer light">
             <div class="footer-container">
