--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -11,7 +11,7 @@
     		<div class="w-next"></div>
         </div>
         <div class="wrapper-project">
-            <iframe width="1180" height="664" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe>
+            <iframe width="100%" height="600" src="//www.youtube.com/embed/kn-1D5z3-Cs" frameborder="0" allowfullscreen></iframe>
         </div>
         <div class="controller-3">
             <ul>
