Removed 3 skills from skill summary. Now only displaying 8 skills.

--- a/new/home.html
+++ b/new/home.html
@@ -129,20 +129,7 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">HTML</div></div>
-                        <div class="tooltip s-roll">
-                            <div class="details">
-                                <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Responsive Frontend Design</li>
-                                    <li><span class="list-dot"></span>Modular Web Elements</li>
-                                    <li><span class="list-dot"></span>Cross-browser + Mobile First Design</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="arrow-down s-roll"></span>
-                    </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">CSS</div></div>
+                        <div class="sl-ico"><div class="sl-title">HTML / CSS</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
@@ -207,46 +194,7 @@
                         <span class="arrow-down s-roll"></span>
                     </div>
                     <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">jQuery</div></div>
-                        <div class="tooltip s-roll">
-                            <div class="details">
-                                <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="arrow-down s-roll"></span>
-                    </div>
-                    <div class="sl-element hideme dontHide">
                         <div class="sl-ico"><div class="sl-title">PowerShell</div></div>
-                        <div class="tooltip s-roll">
-                            <div class="details">
-                                <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="arrow-down s-roll"></span>
-                    </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">C</div></div>
-                        <div class="tooltip s-roll">
-                            <div class="details">
-                                <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <span class="arrow-down s-roll"></span>
-                    </div>
-                    <div class="sl-element hideme dontHide">
-                        <div class="sl-ico"><div class="sl-title">XML</div></div>
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
