--- a/new/home.html
+++ b/new/home.html
@@ -160,8 +160,8 @@
                             <div class="details">
                                 <ul class="feature-list">
                                     <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                    <li><span class="list-dot"></span>Backend Library Design</li>
+                                    <li><span class="list-dot"></span>Modular Backend APIs</li>
                                 </ul>
                             </div>
                         </div>
@@ -185,9 +185,8 @@
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                    <li><span class="list-dot"></span>Backend Data Storage</li>
+                                    <li><span class="list-dot"></span>Database Script Automation</li>
                                 </ul>
                             </div>
                         </div>
@@ -198,9 +197,8 @@
                         <div class="tooltip s-roll">
                             <div class="details">
                                 <ul class="feature-list">
-                                    <li><span class="list-dot"></span>Backend Framework Design</li>
-                                    <li><span class="list-dot"></span>Script Automation</li>
-                                    <li><span class="list-dot"></span>Web Scraper Tools</li>
+                                    <li><span class="list-dot"></span>Pipeline Automation</li>
+                                    <li><span class="list-dot"></span>Tool Scripting</li>
                                 </ul>
                             </div>
                         </div>
@@ -225,7 +223,7 @@
                     </div>
                     <div class="f-element hideme dontHide">
                         <div class="f-ico s-two"></div>
-                        <div class="milestone-counter" data-perc="70">
+                        <div class="milestone-counter" data-perc="75">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
                             <div class="milestone-details">Days of GitHub Contributions</div>
                         </div>
@@ -234,7 +232,7 @@
                         <div class="f-ico s-three"></div>
                         <div class="milestone-counter" data-perc="15000">
                             <span class="milestone-count highlight">0</span> <!-- Initial Value = 0 -->
-                            <div class="milestone-details">Android downloads</div>
+                            <div class="milestone-details">Android App downloads</div>
                         </div>
                     </div>
                     <div class="f-element hideme dontHide">
