Commented out logo scroller + updated p-images.

--- a/new/home.html
+++ b/new/home.html
@@ -339,21 +339,21 @@
             </div>
             <div class="clear"></div>
 
-            <section class="list_carousel responsive hideme dontHide">
-            <ul id="logos">
-                <li><img src="img/logos/logo-01.png" alt="logo"></li>
-                <li><img src="img/logos/logo-02.png" alt="logo"></li>
-                <li><img src="img/logos/logo-03.png" alt="logo"></li>
-                <li><img src="img/logos/logo-04.png" alt="logo"></li>
-                <li><img src="img/logos/logo-05.png" alt="logo"></li>
-                <li><img src="img/logos/logo-06.png" alt="logo"></li>
-                <li><img src="img/logos/logo-07.png" alt="logo"></li>
-            </ul>
-            <div class="clearfix"></div>
-            </section>
+            <!--section class="list_carousel responsive hideme dontHide">
+                <ul id="logos">
+                    <li><img src="img/logos/logo-01.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-02.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-03.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-04.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-05.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-06.png" alt="logo"></li>
+                    <li><img src="img/logos/logo-07.png" alt="logo"></li>
+                </ul>
+                <div class="clearfix"></div>
+            </section-->
 
             <section class="img-spacer">
-              <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
+                <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
             </section>
         </article>
 
