Added autoclicker project + updated all projects + fully disabled logo scroller.

--- a/new/home.html
+++ b/new/home.html
@@ -319,10 +319,10 @@
                             </div>
                         </div>
                         
-                        <div class="ch-grid element" id="portfolio-07.html">
-                            <img class="ch-item" src="img/portfolio/thumb-07.jpg" alt='img'>
+                        <div class="ch-grid element tools backend" id="portfolio-07.html">
+                            <img class="ch-item" src="img/portfolio/thumb-07.png" alt='img'>
                             <div>
-                                <span><span class="p-category"></span>In Progress<span class="cat2">Software</span></span>
+                                <span><span class="p-category"></span>Python Auto Clicker<span class="cat2">Tool Developer</span></span>
                             </div>
                         </div>
                         
@@ -412,7 +412,7 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/home/modernizr-2.6.2.min.js"></script>
         <script src="js/home/main.js"></script>
-        <script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script>
+        <!--script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script-->
         <script src="js/home/jquery.inview.min.js"></script>
         <script src="js/home/jquery.sticky.js"></script>
         <script src="js/home/portfolio.js"></script>
