--- a/new/portfolio-07.html
+++ b/new/portfolio-07.html
@@ -1,10 +1,16 @@
 <div class="img-project">
     <div class="clear"></div>
     <div class="info-project">
-        <div class="tag-project">Software</div>
-        <div class="title-project">In Progress</div>
+        <div class="tag-project">Tool Developer</div>
+        <div class="title-project">Python Auto Clicker</div>
         <div class="spacer"></div>
-        <div class="description">This project is not available for display yet. Please check back later!</div>
+        <div class="description">
+            <h3>General Overview</h3>
+            <p>This was a really fun project as I was able to make my life a lot easier with an auto clicker. This project actually started after I found myself fed up with the free auto clicker I was using which only allowed me to specify time between clicks, start and stop. I needed more features and not to mention, the free auto clicker I was using was coding in Visual Basic 6, which is righteously outdated. I wanted more features and it was clear that this certain auto clicker was not going to recieve any updates.</p>
+            <h3>Software</h3>
+            <p>So, I took it upon myself to create a universal auto clicker that had lots of customizability and features. Python was my language of choice. My auto clicker allows a user to specify a total number of clicks to click, or a certain chunk of time to click for, both of which did not exist with the old tool. Furthermore, my auto clicker even allows you to specify a random time factor which allows the clicks to occur between a time range instead of on an exact pattern. This was a crucial feature to have for those who planned to use this tool for video games with an automated ban system. I also decided to make it super easy and intuitive to use by building a GUI using Tkinter.<br>
+            I've named the tool PyAutoClicker and the source code can be found <a href = "https://github.com/bhamodi/PyAutoClicker" target = "_blank">here!</a></p>
+        </div>
     </div>
 </div>
 <div class="clear"></div>
