--- a/new/portfolio-05.html
+++ b/new/portfolio-05.html
@@ -5,7 +5,10 @@
         <div class="title-project">Fuel Cell Car</div>
         <div class="spacer"></div>
         <div class="description">
-            In this project, I worked with three other Mechatronics Engineers to design, build and program an autonomous fuel cell powered car. I was actively involved in all stages and I assumed a leadership role in my team.<br><br>This fuel cell powered car featured a PID control system and was able to follow lines very accurately. This project really expanded my knowledge of embedded systems and low-level programming. We used a combination of C and C++ to interact with the MSP-430 Microcontroller. You can find all the source code on my <a href = "https://github.com/bhamodi/Autonomous-Fuel-Cell-Car" target = "_blank">GitHub.</a>
+            <h3>General Overview</h3>
+            <p>In this project, I worked with three other Mechatronics Engineers to design, build and program an autonomous fuel cell powered car. I was actively involved in all stages and I assumed a leadership role in my team. This fuel cell powered car featured a PID control system and was able to follow lines very accurately.</p>
+            <h3>Software</h3>
+            <p>This project really expanded my knowledge of embedded systems and low-level programming. We used a combination of C and C++ to interact with the MSP-430 Microcontroller. You can find all the source code on my <a href = "https://github.com/bhamodi/Autonomous-Fuel-Cell-Car" target = "_blank">GitHub.</a></p>
         </div>
     </div>
 </div>
