--- a/new/home.html
+++ b/new/home.html
@@ -81,8 +81,9 @@
                     <li class="current"><a href="#home">home</a></li>
                     <li><a href="#anchor2">about</a></li>
                     <li><a href="#anchor3">facts</a></li>
-                    <li><a href="#anchor4">projects</a></li>
-                    <li><a href="#anchor5">contact</a></li>
+                    <li><a href="#anchor4">experience</a></li>
+                    <li><a href="#anchor5">projects</a></li>
+                    <li><a href="#anchor6">contact</a></li>
                 </ul>
             </nav>
             <nav class="menu">
@@ -91,7 +92,8 @@
                     <li><a href="#anchor2">about</a></li>
                     <li><a href="#anchor3">facts</a></li>
                     <!--<li><a href="#">blog</a></li>-->
-                    <li><a href="#anchor4">projects</a></li>
+                    <li><a href="#anchor4">experience</a></li>
+                    <li><a href="#anchor5">projects</a></li>
                     <li><a href="#anchor5">contact</a></li>
                 </ul>
             </nav>
@@ -249,12 +251,34 @@
 
         <article class="parallax p-two">
             <div class="p-title-one p-dark">Ultra Responsive</div>
-            <div class="p-title-two">On both Mobile & Desktop</div>
+            <div class="p-title-two">ON BOTH MOBILE & DESKTOP</div>
             <div class="spacer newtr"></div>
             <div class="p-image-01 hideme-slide2 dontHide"><img src="img/parallax/p-image-01.png" alt='img'></div>
         </article>
-        
+
         <article id="anchor4" class="content dark">
+            <header class="title one">Work Experience</header>
+            <div class="spacer"></div>
+            <div class="title two">Check out where I've worked!</div>
+            <!-- TODO: Build work experience section. -->
+            <div id="work" class="work-container">
+                <div class="work-exp-1">
+                    Tagged
+                </div>
+                <div class="work-exp-1">
+                    IBM
+                </div>
+                <div class="work-exp-1">
+                    WIRE
+                </div>
+                <div class="work-exp-1">
+                    Onprint
+                </div>
+            </div>
+            <div class="clear"></div>
+        </article>
+        
+        <article id="anchor5" class="content dark">
             <header class="title one">My Projects</header>
             <div class="spacer"></div>
             <div class="title two">Check out my following projects, I'm sure you'll love them!</div>
@@ -359,7 +383,7 @@
 
         <footer class="footer light">
             <div class="footer-container">
-                <div id="anchor5" class="title one">Contact</div>
+                <div id="anchor6" class="title one">Contact</div>
                 <div class="spacer"></div>
                 <div class="title two">I like to create things with fun, like-minded people.<br>Feel free to say hello!</div>
                 <div class="hideme dontHide">
