Work Experience Update - Beta version.

--- a/new/home.html
+++ b/new/home.html
@@ -262,17 +262,29 @@
             <div class="title two">Check out where I've worked!</div>
             <!-- TODO: Build work experience section. -->
             <div id="work" class="work-container">
-                <div class="work-exp-1">
-                    Tagged
+                <div class="work-exp-left hideme">
+                    <div class="work-logo"></div>
+                    <div class="work-company">Tagged</div>
+                    <div class="work-position">Software Engineer</div>
+                    <div class="work-description"></div>
                 </div>
-                <div class="work-exp-1">
-                    IBM
+                <div class="work-exp-right hideme">
+                    <div class="work-logo"></div>
+                    <div class="work-company">IBM</div>
+                    <div class="work-position">Software Developer</div>
+                    <div class="work-description"></div>
                 </div>
-                <div class="work-exp-1">
-                    WIRE
+                <div class="work-exp-left hideme">
+                    <div class="work-logo"></div>
+                    <div class="work-company">WIRE</div>
+                    <div class="work-position">Researcher</div>
+                    <div class="work-description"></div>
                 </div>
-                <div class="work-exp-1">
-                    Onprint
+                <div class="work-exp-right hideme">
+                    <div class="work-logo"></div>
+                    <div class="work-company">Onprint</div>
+                    <div class="work-position">Graphic Designer</div>
+                    <div class="work-description"></div>
                 </div>
             </div>
             <div class="clear"></div>
