--- a/new/home.html
+++ b/new/home.html
@@ -58,7 +58,7 @@
                 <!-- <div class="bounce"></div> -->
                 
                 <!-- Video Background -->
-                <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;" title="New York &quot;Afterglow&quot;">youtube</a>
+                <a id="background-video" class="player mb_YTVPlayer" data-property="{videoURL:'http://www.youtube.com/watch?v=kn-1D5z3-Cs'}" style="display: none; background-image: none; background-position: initial initial; background-repeat: initial initial;"></a>
             </div>
         </section>
         <section id="homedevice" class="clear"></section>
