Completely removed logo scroller + updated content light.

--- a/new/home.html
+++ b/new/home.html
@@ -256,7 +256,7 @@
             <div class="p-image-01 hideme-slide2 dontHide"><img src="img/parallax/p-image-01.png" alt='img'></div>
         </article>
 
-        <article id="anchor4" class="content dark">
+        <article id="anchor4" class="content light">
             <header class="title one">Work Experience</header>
             <div class="spacer"></div>
             <div class="title two">Check out where I've worked!</div>
@@ -374,20 +374,6 @@
                 </div>
             </div>
             <div class="clear"></div>
-
-            <!--section class="list_carousel responsive hideme dontHide">
-                <ul id="logos">
-                    <li><img src="img/logos/logo-01.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-02.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-03.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-04.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-05.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-06.png" alt="logo"></li>
-                    <li><img src="img/logos/logo-07.png" alt="logo"></li>
-                </ul>
-                <div class="clearfix"></div>
-            </section-->
-
             <section class="img-spacer">
                 <div class="img-item hideme dontHide"><img src="img/imac.png" alt='img'></div>
             </section>
@@ -448,7 +434,6 @@
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
         <script src="js/home/modernizr-2.6.2.min.js"></script>
         <script src="js/home/main.js"></script>
-        <!--script src="js/home/jquery.carouFredSel-6.2.1-packed.js"></script-->
         <script src="js/home/jquery.inview.min.js"></script>
         <script src="js/home/jquery.sticky.js"></script>
         <script src="js/home/portfolio.js"></script>
