Added work logos + made css animations trigger individually.

--- a/new/home.html
+++ b/new/home.html
@@ -262,26 +262,26 @@
             <div class="title two">Check out where I've worked!</div>
             <!-- TODO: Build work experience section. -->
             <div id="work" class="work-container">
-                <div class="work-exp-left hideme">
-                    <div class="work-logo"></div>
+                <div class="work-exp-left-1 hideme">
+                    <div class="work-logo"><img src="img/work/tagged.png"></div>
                     <div class="work-company">Tagged</div>
                     <div class="work-position">Software Engineer</div>
                     <div class="work-description"></div>
                 </div>
-                <div class="work-exp-right hideme">
-                    <div class="work-logo"></div>
+                <div class="work-exp-right-1 hideme">
+                    <div class="work-logo"><img src="img/work/ibm.png"></div>
                     <div class="work-company">IBM</div>
                     <div class="work-position">Software Developer</div>
                     <div class="work-description"></div>
                 </div>
-                <div class="work-exp-left hideme">
-                    <div class="work-logo"></div>
+                <div class="work-exp-left-2 hideme">
+                    <div class="work-logo"><img src="img/work/wire.png"></div>
                     <div class="work-company">WIRE</div>
                     <div class="work-position">Researcher</div>
                     <div class="work-description"></div>
                 </div>
-                <div class="work-exp-right hideme">
-                    <div class="work-logo"></div>
+                <div class="work-exp-right-2 hideme">
+                    <div class="work-logo"><img src="img/work/onprint.png"></div>
                     <div class="work-company">Onprint</div>
                     <div class="work-position">Graphic Designer</div>
                     <div class="work-description"></div>
