Added work experience descriptions.

--- a/new/home.html
+++ b/new/home.html
@@ -266,25 +266,47 @@
                     <div class="work-logo"><img src="img/work/tagged.png"></div>
                     <div class="work-company">Tagged</div>
                     <div class="work-position">Software Engineer</div>
-                    <div class="work-description"></div>
+                    <div class="work-description">
+                        <ul>
+                            <li>Shipped production level code to over 2.5 million daily active users.</li>
+                            <li>Implemented a mobile API which helps deliver mobile specific content to users via mobile device detection.</li>
+                            <li>Worked on recreating the entire messaging backend using technologies such as Hadoop, Kafka, Avro and XMPP.</li>
+                            <li>Optimized the website to have a 10% better load time by re-factoring and removing redundancies in the codebase.</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="work-exp-right-1 hideme">
                     <div class="work-logo"><img src="img/work/ibm.png"></div>
                     <div class="work-company">IBM</div>
                     <div class="work-position">Software Developer</div>
-                    <div class="work-description"></div>
+                    <div class="work-description">
+                        <ul>
+                            <li>Shipped a Java tool that determines more system info than Microsoft’s sysinfo command and produces a CSV file of its findings. This tool is being used internally and saves approximately $1,000 annually per employee.</li>
+                            <li>Automated the environment backup/restoration pipeline process using PowerShell and SQL.</li>
+                            <li>Developed web automation using Selenium that collects data from web pages for data verification purposes.</li>
+                            <li>Updated and maintained various large-scale scripts and automated test cases.</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="work-exp-left-2 hideme">
                     <div class="work-logo"><img src="img/work/wire.png"></div>
                     <div class="work-company">WIRE</div>
                     <div class="work-position">Researcher</div>
-                    <div class="work-description"></div>
+                    <div class="work-description">
+                        <ul>
+                            <li>Researched the history and future of high-speed cameras as well as potential environmental impact.</li>
+                        </ul>
+                    </div>
                 </div>
                 <div class="work-exp-right-2 hideme">
                     <div class="work-logo"><img src="img/work/onprint.png"></div>
                     <div class="work-company">Onprint</div>
                     <div class="work-position">Graphic Designer</div>
-                    <div class="work-description"></div>
+                    <div class="work-description">
+                        <ul>
+                            <li>Over 100 hours of graphic design using Adobe Photoshop and Illustrator.</li>
+                        </ul>
+                    </div>
                 </div>
             </div>
             <div class="clear"></div>
